提交第一次作业（最新）

--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d110b86e-1cc3-4d5d-a88b-a5f604b25913",
    "metadata": {},
    "outputs": [
@@ -79,10 +79,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 5 4 3 2 3 2 6 3 4\n",
-      "37\n",
-      "方式数量: [0, 0, 0, 1, 1, 1, 8, 22, 42, 87, 155, 254, 415, 674, 916, 1312, 1859, 2517, 3230, 4085, 4873, 5624, 6192, 6723, 7114, 7368, 7159, 6946, 6290, 5630, 4810, 4025, 3285, 2535, 1909, 1396, 928, 658, 395, 243, 165, 75, 41, 20, 10, 5, 1, 1, 0, 0, 0]\n",
-      "达到方式数量最多的总和值是: 35 ，有7368 种方式.\n"
+      "得到总和 60 的投掷方式有：1 种\n",
+      "方式数量: [0, 0, 0, 0, 0, 4, 7, 18, 29, 84, 147, 278, 385, 647, 987, 1383, 1908, 2553, 3234, 4062, 4919, 5474, 6386, 6809, 7163, 7414, 7196, 6907, 6330, 5612, 4779, 3875, 3156, 2504, 1898, 1338, 973, 606, 394, 258, 136, 83, 35, 18, 8, 2, 0, 1, 0, 0, 0]\n",
+      "达到方式数量最多的总和值是: 35 ，有7414 种方式.\n"
      ]
     }
    ],
@@ -91,24 +90,27 @@
     "#3.1\n",
     "import random\n",
     "def rolling():\n",
-    "    return random.randint(1,6)\n",
-    "#投掷10次骰子\n",
-    "R1=rolling()\n",
-    "R2=rolling()\n",
-    "R3=rolling()\n",
-    "R4=rolling()\n",
-    "R5=rolling()\n",
-    "R6=rolling()\n",
-    "R7=rolling()\n",
-    "R8=rolling()\n",
-    "R9=rolling()\n",
-    "R10=rolling()\n",
-    "print(R1,R2,R3,R4,R5,R6,R7,R8,R9,R10)\n",
-    "#定义函数计算10次骰子结果的总和\n",
-    "def Find_number_of_ways():\n",
-    "    total_sum=R1+R2+R3+R4+R5+R6+R7+R8+R9+R10\n",
-    "    print(total_sum)\n",
-    "Find_number_of_ways()\n",
+    "    return random.randint(1, 6)\n",
+    "# 定义函数计算得到特定总和 x 的投掷方式数量\n",
+    "def find_number_of_ways(x):\n",
+    "    count = 0\n",
+    "    # 遍历所有可能的骰子点数组合\n",
+    "    for dice1 in range(1, 7):\n",
+    "        for dice2 in range(1, 7):\n",
+    "            for dice3 in range(1, 7):\n",
+    "                for dice4 in range(1, 7):\n",
+    "                    for dice5 in range(1, 7):\n",
+    "                        for dice6 in range(1, 7):\n",
+    "                            for dice7 in range(1, 7):\n",
+    "                                for dice8 in range(1, 7):\n",
+    "                                    for dice9 in range(1, 7):\n",
+    "                                        for dice10 in range(1, 7):\n",
+    "                                            if (dice1 + dice2 + dice3 + dice4 + dice5 + dice6 + dice7 + dice8 + dice9 + dice10) == x:\n",
+    "                                                count += 1\n",
+    "    return count\n",
+    "# 测试函数\n",
+    "x = 60\n",
+    "print(f\"得到总和 {x} 的投掷方式有：{find_number_of_ways(x)} 种\")\n",
     "\n",
     "#3.2\n",
     "def count_number_of_ways():\n",
